Adjust routing to make it possible to embed it inside the VS Code extension
Add vscodeApi instance and environment global variables for VS Code injection

--- a/packages/jaeger-ui/public/index.html
+++ b/packages/jaeger-ui/public/index.html
@@ -35,6 +35,14 @@
         return JAEGER_VERSION;
       }
     </script>
+    <script>
+      // Variables for injection by VS Code extension
+      var VS_CODE_SETTINGS = {
+        apiBaseUrl: "",
+        startPath: "",
+        staticPath: "",
+      };
+    </script>
   </head>
   <body>
     <div id="jaeger-ui-root"></div>
