Add post messaging between VS Code extension and Jaeger UI
Send spans for location resolution on Trace page load
Handle location availability for spans, showing corresponding icon
Add navigation to code for span

--- a/packages/jaeger-ui/public/index.html
+++ b/packages/jaeger-ui/public/index.html
@@ -42,6 +42,17 @@
         startPath: "",
         staticPath: "",
       };
+
+      // Store list of trace spans with resolved location globally
+      var spansWithResolvedLocation = {};
+
+      window.addEventListener("message", (e) => {
+        const message = e.data;
+        switch (message.command) {
+          case "setSpansWithResolvedLocation":
+            spansWithResolvedLocation = message.data;
+        }
+      });
     </script>
   </head>
   <body>
