Add global variable for embedded mode Adjust styles for span code navigation link

--- a/packages/jaeger-ui/public/index.html
+++ b/packages/jaeger-ui/public/index.html
@@ -41,6 +41,7 @@
         apiBaseUrl: "",
         startPath: "",
         staticPath: "",
+        embeddedMode: false,
       };
 
       // Store list of trace spans with resolved location globally
