Add loader for data provided from Digma VS extension Replace importance icon with emoji

--- a/packages/jaeger-ui/public/index.html
+++ b/packages/jaeger-ui/public/index.html
@@ -46,12 +46,14 @@
 
       // Store list of trace spans with resolved location globally
       var spansWithResolvedLocation = {};
+      var pendingOperationsCount = 0;
 
       window.addEventListener("message", (e) => {
         const message = e.data;
         switch (message.command) {
           case "setSpansWithResolvedLocation":
             spansWithResolvedLocation = message.data;
+            pendingOperationsCount--;
         }
       });
     </script>
