--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -39,26 +39,10 @@
       window.global = {};
     </script>
     <script>
-      // Variables for injection by VS Code extension
-      var VS_CODE_SETTINGS = {
-        apiBaseUrl: "",
-        startPath: "",
-        staticPath: "",
-        embeddedMode: false,
-      };
-
-      // Store list of trace spans with resolved location globally
-      var spansWithResolvedLocation = {};
-      var pendingOperationsCount = 0;
-
-      window.addEventListener("message", (e) => {
-        const message = e.data;
-        switch (message.command) {
-          case "setSpansWithResolvedLocation":
-            spansWithResolvedLocation = message.data;
-            pendingOperationsCount--;
-        }
-      });
+      window.apiBaseUrl;
+      window.initialRoutePath;
+      window.embeddedMode;
+      window.staticPath;
     </script>
   </head>
   <body>
