Add custom error messages

--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -42,6 +42,7 @@
       window.apiBaseUrl;
       window.initialRoutePath;
       window.embeddedMode;
+      window.isUserDefinedJaegerQueryURL;
       window.staticPath;
     </script>
   </head>
