Add keyboard shortcuts

--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -44,6 +44,7 @@
       window.embeddedMode;
       window.isUserDefinedJaegerQueryURL;
       window.staticPath;
+      window.enableZoomControls;
     </script>
   </head>
   <body>
