Add message to open URL in default browser

--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -45,6 +45,7 @@
       window.isUserDefinedJaegerQueryURL;
       window.staticPath;
       window.enableZoomControls;
+      window.platform;
     </script>
   </head>
   <body>
