Enable alternative views dropdown in Embedded mode
Add Logger

--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -46,6 +46,7 @@
       window.staticPath;
       window.enableZoomControls;
       window.platform;
+      window.isLoggingEnabled;
     </script>
   </head>
   <body>
