Add baseUrl variable

--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -39,6 +39,7 @@
       window.global = {};
     </script>
     <script>
+      window.baseUrl;
       window.apiBaseUrl;
       window.initialRoutePath;
       window.embeddedMode;
