--- a/packages/jaeger-ui/index.html
+++ b/packages/jaeger-ui/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="digma-jaeger-ui-version" content="__DIGMA_JAEGER_UI_VERSION__">
     <!-- prevent caching of this HTML by any server, Go or otherwise -->
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
